<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="7dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/recipe_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/recipe_image"
        android:scaleType="centerCrop"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:text="@string/ingredients"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ingredients_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Ingredients" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/steps"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/step_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>

</LinearLayout>