<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/video_view"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/recipe_image" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/button_previous"
        app:layout_constraintTop_toBottomOf="@id/video_view" />

    <TextView
        android:id="@+id/button_previous"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/previous"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/button_next"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="NEXT" />

    <TextView
        android:id="@+id/ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ratio"
        app:layout_constraintRight_toLeftOf="@id/button_next"
        app:layout_constraintTop_toTopOf="@id/button_previous"
        app:layout_constraintLeft_toRightOf="@id/button_previous"
        app:layout_constraintBottom_toBottomOf="parent" />


</android.support.constraint.ConstraintLayout>